--- a/os-resource/REUSE.toml
+++ b/os-resource/REUSE.toml
@@ -8,8 +8,8 @@ path = [
   "VERSION",
   "go.sum",
 
-  "pkg/api/buf.lock",
-  "pkg/api/attestmgr/v1/attestmgr*.go",
+  "**.md",
+  "**.svg",
 ]
 
 SPDX-FileCopyrightText = "2025 Intel Corporation"
