fix: set default port attestmgr to match deployment port
- set correct status timestamp
- Add tests that would have caught timestamp issue
- spelling issue in test code
- change config tests to use the default inventory port
- update golangci-lint config and fix warnings it flagged

--- a/attestationstatus/.golangci.yml
+++ b/attestationstatus/.golangci.yml
@@ -50,7 +50,6 @@ linters:
     - stylecheck
     - tagliatelle
     - testpackage
-    - tenv
     - testableexamples
     - thelper
     - tparallel
@@ -59,6 +58,7 @@ linters:
     - unparam
     - unused
     - usestdlibvars
+    - usetesting
     - whitespace
 
 run:
@@ -222,6 +222,8 @@ issues:
   new: false
   fix: false
 
+  uniq-by-line: false
+
 output:
   # Format:
   # colored-line-number|line-number|json|tab|checkstyle|code-climate|junit-xml|github-actions
@@ -235,7 +237,5 @@ output:
   formats: colored-line-number:stdout,html:out/golangci-lint_report.html
 
   print-linter-name: true
-
-  uniq-by-line: false
 
   sort-results: true
