Update Makefile and prepare for buildall

--- a/host/Makefile
+++ b/host/Makefile
@@ -28,6 +28,7 @@ PROTOCGENGRPCGATEWAY := true
 
 # Project variables
 PROJECT_NAME         := hostmgr
+PROJECT_NICKNAME     := h
 BINARY_NAME          := $(PROJECT_NAME)
 
 # Code versions, tags, and so on
@@ -36,6 +37,7 @@ VERSION_MAJOR        := $(shell cut -c 1 VERSION)
 DOCKER_IMG_NAME      := $(PROJECT_NAME)
 DOCKER_VERSION       ?= $(shell git branch --show-current | sed 's/\//_/g')
 GIT_COMMIT           ?= $(shell git rev-parse HEAD)
+GIT_TAG_PREFIX       := host/v
 
 # Test variables
 # Set TEST_TARGET to '<testname1>' or '<testname1\|testname2>' to run specific tests or use regex '<testname.*>' - example:
