--- a/attestationstatus/Makefile
+++ b/attestationstatus/Makefile
@@ -26,6 +26,7 @@ PROTOCGENGRPCGATEWAY := true
 
 # Project variables
 PROJECT_NAME         := attestationstatusmgr
+PROJECT_NICKNAME     := a
 BINARY_NAME          := ${PROJECT_NAME}
 
 # Code versions, tags, and so on
@@ -34,6 +35,7 @@ VERSION_MAJOR        := $(shell cut -c 1 VERSION)
 DOCKER_IMG_NAME      := $(PROJECT_NAME)
 DOCKER_VERSION       ?= $(shell git branch --show-current | sed 's/\//_/g')
 GIT_COMMIT           ?= $(shell git rev-parse HEAD)
+GIT_TAG_PREFIX       := attestationstatus/v
 
 # Test variables
 # Set TEST_TARGET to '<testname1>' or '<testname1\|testname2>' to run specific tests or use regex '<testname.*>' - example:
