--- a/networking/Makefile
+++ b/networking/Makefile
@@ -19,6 +19,7 @@ GOJUNITREPORT      := true
 
 # Project variables
 PROJECT_NAME       := netmgr
+PROJECT_NICKNAME   := n
 BINARY_NAME        := $(PROJECT_NAME)
 
 # Code Versions
@@ -27,6 +28,7 @@ VERSION_MAJOR      := $(shell cut -c 1 VERSION)
 DOCKER_IMG_NAME    := $(PROJECT_NAME)
 DOCKER_VERSION     ?= $(shell git branch --show-current | sed 's/\//_/g')
 GIT_COMMIT         ?= $(shell git rev-parse HEAD)
+GIT_TAG_PREFIX     := networking/v
 
 # Test variables
 # Set TEST_TARGET to '<testname1>' or '<testname1\|testname2>' to run specific tests or use regex '<testname.*>' - example:
