--- a/os-resource/Makefile
+++ b/os-resource/Makefile
@@ -15,6 +15,7 @@ TOOL_VERSION_CHECK ?= 1
 
 # Project variables
 PROJECT_NAME       := osresourcemgr
+PROJECT_NICKNAME   := osr
 BINARY_NAME        := osrm
 
 # Code Versions
@@ -23,6 +24,7 @@ VERSION_MAJOR      := $(shell cut -c 1 VERSION)
 DOCKER_IMG_NAME    := $(PROJECT_NAME)
 DOCKER_VERSION     ?= $(shell git branch --show-current | sed 's/\//_/g')
 GIT_COMMIT         ?= $(shell git rev-parse HEAD)
+GIT_TAG_PREFIX     := os-resource/v
 
 # Test variables
 # Set TEST_TARGET to '<testname1>' or '<testname1\|testname2>' to run specific tests or use regex '<testname.*>' - example:
@@ -55,5 +57,5 @@ go-run: build ## Run the resource manager
 	$(GOCMD) run $(GOEXTRAFLAGS) ./cmd/$(BINARY_NAME).go
 
 #### Unsupported targets ###
-buf-update buf-lint buf-gen dependency dependency-check go-dependency-check go-dependency: ## Unsupported target
+buf-update buf-lint buf-gen dependency dependency-check go-dependency: ## Unsupported target
 	echo 'make "$@" is unsupported'
