--- a/telemetry/Makefile
+++ b/telemetry/Makefile
@@ -22,6 +22,7 @@ PROTOCGENVALIDATEGO  := true
 
 # Project variables
 PROJECT_NAME         := telemetrymgr
+PROJECT_NICKNAME     := t
 BINARY_NAME          := $(PROJECT_NAME)
 
 # Code Versions
@@ -30,6 +31,7 @@ VERSION_MAJOR        := $(shell cut -c 1 VERSION)
 DOCKER_IMG_NAME      := $(PROJECT_NAME)
 DOCKER_VERSION       ?= $(shell git branch --show-current | sed 's/\//_/g')
 GIT_COMMIT           ?= $(shell git rev-parse HEAD)
+GIT_TAG_PREFIX       := telemetry/v
 
 # Test variables
 # Set TEST_TARGET to '<testname1>' or '<testname1\|testname2>' to run specific tests or use regex '<testname.*>' - example:
