--- a/.github/workflows/auto-add-labels.yml
+++ b/.github/workflows/auto-add-labels.yml
@@ -16,3 +16,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/labeler@v5.0.0
+        with:
+          repo-token: ${{ secrets.SYS_ORCH_GITHUB }}
