chore: Pinpoint actions and update dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -30,3 +30,6 @@ updates:
           - "*"
         exclude-patterns:  # Internal dependencies are update into separate PRs.
           - "*open-edge-platform*"
+      internal-dependencies:
+        patterns:
+          - "*open-edge-platform*"
