--- a/.github/workflows/post-merge-telemetry.yml
+++ b/.github/workflows/post-merge-telemetry.yml
@@ -26,3 +26,8 @@ jobs:
       prefix_tag_separator: "/"
       project_folder: "telemetry"
     secrets: inherit
+
+permissions:
+  contents: read
+  security-events: write
+  id-token: write
