--- a/maintenance/Makefile
+++ b/maintenance/Makefile
@@ -27,6 +27,7 @@ PROTOCGENVALIDATEGO := true
 PROJECT_NAME        := maintmgr
 PROJECT_NICKNAME    := m
 BINARY_NAME         := $(PROJECT_NAME)
+SUBPROJECT_DIR      := maintenance
 
 # Code versions, tags, and so on
 VERSION             := $(shell cat VERSION)
@@ -53,7 +54,7 @@ include ../common.mk
 
 generate: buf-gen ## Generate types, server and client
 
-lint: generate license go-lint hadolint buf-lint mdlint ## Run all linters
+lint: generate license buf-lint go-lint hadolint mdlint ## Run all linters
 
 test: go-test ## Run all tests
 
