--- a/host/Makefile
+++ b/host/Makefile
@@ -30,6 +30,7 @@ PROTOCGENGRPCGATEWAY := true
 PROJECT_NAME         := hostmgr
 PROJECT_NICKNAME     := h
 BINARY_NAME          := $(PROJECT_NAME)
+SUBPROJECT_DIR       := host
 
 # Code versions, tags, and so on
 VERSION              := $(shell cat VERSION)
@@ -56,7 +57,7 @@ include ../common.mk
 
 generate: buf-gen ## Generate all the code
 
-lint: generate license yamllint go-lint hadolint buf-lint mdlint ## Run all linters and generate targets
+lint: generate license yamllint buf-lint go-lint hadolint mdlint ## Run all linters and generate targets
 
 test: go-test ## Run all tests
 
