--- a/host/REUSE.toml
+++ b/host/REUSE.toml
@@ -7,10 +7,10 @@ version = 1
 path = [
   "VERSION",
   "go.sum",
-  "README.md",
 
+  "**.md",
+  "pkg/api/hostmgr/proto/*.pb*.go",
   "pkg/api/buf.lock",
-  "pkg/api/attestmgr/v1/attestmgr*.go",
 ]
 
 SPDX-FileCopyrightText = "2025 Intel Corporation"
