--- a/os-resource/REUSE.toml
+++ b/os-resource/REUSE.toml
@@ -7,10 +7,9 @@ version = 1
 path = [
   "VERSION",
   "go.sum",
-  "README.md",
 
-  "pkg/api/buf.lock",
-  "pkg/api/attestmgr/v1/attestmgr*.go",
+  "**.md",
+  "**.svg",
 ]
 
 SPDX-FileCopyrightText = "2025 Intel Corporation"
