--- a/telemetry/REUSE.toml
+++ b/telemetry/REUSE.toml
@@ -7,10 +7,11 @@ version = 1
 path = [
   "VERSION",
   "go.sum",
-  "README.md",
 
-  "pkg/api/buf.lock",
-  "pkg/api/attestmgr/v1/attestmgr*.go",
+  "**.md",
+  "**.svg",
+  "pkg/api/telemetrymgr/v1/*.pb*.go",
+  "api/buf.lock",
 ]
 
 SPDX-FileCopyrightText = "2025 Intel Corporation"
