--- a/.github/workflows/post-merge-networking.yml
+++ b/.github/workflows/post-merge-networking.yml
@@ -12,8 +12,14 @@ on:
     paths:
       - "networking/**"
 
+permissions: {}
+
 jobs:
   post-merge-pipeline:
+    permissions:
+      contents: read
+      security-events: write
+      id-token: write
     uses: open-edge-platform/orch-ci/.github/workflows/post-merge.yml@main
     with:
       run_version_check: true
@@ -26,8 +32,3 @@ jobs:
       prefix_tag_separator: "/"
       project_folder: "networking"
     secrets: inherit
-
-permissions:
-  contents: read
-  security-events: write
-  id-token: write
