Fixed buf lint errors

--- a/telemetry/Makefile
+++ b/telemetry/Makefile
@@ -68,7 +68,4 @@ buf-update: common-buf-update ## Update buf modules
 
 buf-gen: common-buf-gen ## Compile protoc files into code
 
-buf-lint: ## Lint and format protobuf files
-	buf --version
-	# TODO: currently failing lint, need to be fixed
-	# TODO: disabling breaking check, re-enable when breaking change is merged
+buf-lint: common-buf-lint ## Lint and format protobuf files
