--- a/telemetry/api/buf.yaml
+++ b/telemetry/api/buf.yaml
@@ -12,3 +12,8 @@ lint:
   use:
     - STANDARD
     - ENUM_FIRST_VALUE_ZERO
+  except:
+    - SERVICE_SUFFIX
+    - RPC_REQUEST_STANDARD_NAME
+    - RPC_RESPONSE_STANDARD_NAME
+  
