chore: sort zizmor findings

--- a/.github/workflows/post-merge-maintenance.yml
+++ b/.github/workflows/post-merge-maintenance.yml
@@ -31,4 +31,9 @@ jobs:
       run_artifact: false
       prefix_tag_separator: "/"
       project_folder: "maintenance"
-    secrets: inherit
+    secrets:
+      SYS_ORCH_GITHUB: ${{ secrets.SYS_ORCH_GITHUB }}
+      COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
+      COSIGN_PRIVATE_KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
+      NO_AUTH_ECR_PUSH_USERNAME: ${{ secrets.NO_AUTH_ECR_PUSH_USERNAME }}
+      NO_AUTH_ECR_PUSH_PASSWD: ${{ secrets.NO_AUTH_ECR_PUSH_PASSWD }}
