--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -25,3 +25,11 @@ updates:
       internal-dependencies:
         patterns:
           - "*open-edge-platform*"
+  - package-ecosystem: "github-actions"
+    directories:
+      - "/"  # this enables searching only in /.github/workflows directory
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 10
+    commit-message:
+      prefix: "[gha] "
