--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,4 +2,4 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 
-* @niket-intc @Ram-srini @ipsita-npg @SushilLakra @rranjan3 @cjnolan @damiankopyto
+* @niket-intc @Ram-srini @ipsita-npg @SushilLakra @rranjan3 @cjnolan @damiankopyto @soniabha-intc @sunil-parida @krishnajs
