--- a/maintenance/.golangci.yml
+++ b/maintenance/.golangci.yml
@@ -158,6 +158,7 @@ linters-settings:
           - github.com/stretchr/testify/assert
           - github.com/stretchr/testify/require
           - github.com/google/uuid
+          - github.com/Masterminds/semver/v3
 
 issues:
   max-issues-per-linter: 0
