--- a/.github/workflows/pre-merge.yml
+++ b/.github/workflows/pre-merge.yml
@@ -90,6 +90,7 @@ jobs:
         project_folder: ${{ fromJson(needs.pre-checks.outputs.filtered_projects) }}
     uses: open-edge-platform/orch-ci/.github/workflows/pre-merge.yml@main
     with:
+      orch_ci_repo_ref: cf81328e4c9526e579181efb1f609af06071889b
       run_security_scans: true
       run_version_check: true
       run_dep_version_check: true
