--- a/.github/workflows/pre-merge.yml
+++ b/.github/workflows/pre-merge.yml
@@ -33,10 +33,10 @@ jobs:
         with:
           persist-credentials: false
       - name: "Verify Branch Name"
-        uses: open-edge-platform/orch-ci/verify-branch-name@c4b86434962d13f65fd7b16a33e9eecfd5849a64  # 0.1.56
+        uses: open-edge-platform/orch-ci/verify-branch-name@cf81328e4c9526e579181efb1f609af06071889b  # 0.1.55
       - name: "Discover Changed Subfolders"
         id: discover-changes
-        uses: open-edge-platform/orch-ci/discover-changed-subfolders@c4b86434962d13f65fd7b16a33e9eecfd5849a64  # 0.1.56
+        uses: open-edge-platform/orch-ci/discover-changed-subfolders@cf81328e4c9526e579181efb1f609af06071889b  # 0.1.55
       - name: "Filter Out Unwanted Changed Subfolders"
         id: filter-changes
         env:
@@ -90,6 +90,7 @@ jobs:
         project_folder: ${{ fromJson(needs.pre-checks.outputs.filtered_projects) }}
     uses: open-edge-platform/orch-ci/.github/workflows/pre-merge.yml@main
     with:
+      orch_ci_repo_ref: cf81328e4c9526e579181efb1f609af06071889b
       run_security_scans: true
       run_version_check: true
       run_dep_version_check: true
