--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,3 +3,6 @@
 # SPDX-License-Identifier: Apache-2.0
 
 * @niket-intc @Ram-srini @ipsita-npg @SushilLakra @rranjan3 @cjnolan @damiankopyto @soniabha-intc @sunil-parida @krishnajs @jkossak
+
+# CI files
+.github/ @adimoft @daveroge @shanedonohue @manilk1x
