Adding CODEOWNERS in .github

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,4 +5,4 @@
 * @niket-intc @Ram-srini @ipsita-npg @SushilLakra @rranjan3 @cjnolan @damiankopyto @soniabha-intc @sunil-parida @krishnajs @jkossak
 
 # CI files
-.github/ @adimoft @daveroge @shanedonohue @manilk1x
+.github/ @adimoft @daveroge @shanedonohue @manilk1x @niket-intc @Ram-srini @ipsita-npg @SushilLakra @rranjan3 @cjnolan @damiankopyto @soniabha-intc @sunil-parida @krishnajs @jkossak
