--- a/.github/workflows/post-merge-host.yml
+++ b/.github/workflows/post-merge-host.yml
@@ -22,7 +22,7 @@ jobs:
       id-token: write
     uses: open-edge-platform/orch-ci/.github/workflows/post-merge.yml@da08a06e8aec70621e50ed4aec2fac5599839f45  # v0.1.62
     with:
-      orch_ci_repo_ref: da08a06e8aec70621e50ed4aec2fac5599839f45
+      orch_ci_repo_ref: da08a06e8aec70621e50ed4aec2fac5599839f45  # v0.1.62
       run_version_check: true
       run_dep_version_check: true
       run_build: true
