--- a/.github/workflows/post-merge-attestationstatus.yml
+++ b/.github/workflows/post-merge-attestationstatus.yml
@@ -12,7 +12,8 @@ on:
     paths:
       - "attestationstatus/**"
 
-permissions: {}
+permissions:
+  contents: read
 
 jobs:
   post-merge-pipeline:
