--- a/os-resource/.trivyignore
+++ b/os-resource/.trivyignore
@@ -21,5 +21,5 @@ CVE-2025-61723
 CVE-2025-61724
 CVE-2025-61725
 
-# Needs upgrade of golang to 1.24.11
+# Needs golang upgrade to 1.24.11
 CVE-2025-61729
