--- a/.github/workflows/pre-merge.yml
+++ b/.github/workflows/pre-merge.yml
@@ -89,9 +89,8 @@ jobs:
       fail-fast: false
       matrix:
         project_folder: ${{ fromJson(needs.pre-checks.outputs.filtered_projects) }}
-    uses: open-edge-platform/orch-ci/.github/workflows/pre-merge.yml@main
+    uses: open-edge-platform/orch-ci/.github/workflows/pre-merge.yml@20b640842e63420b06b3ff4247e608228e14c74a  # 2026.0.1
     with:
-      orch_ci_repo_ref: da08a06e8aec70621e50ed4aec2fac5599839f45  # 0.1.62
       run_security_scans: true
       run_version_check: true
       run_dep_version_check: true
