--- a/attestationstatus/.golangci.yml
+++ b/attestationstatus/.golangci.yml
@@ -2,7 +2,13 @@
 # SPDX-FileCopyrightText: (C) 2025 Intel Corporation
 # SPDX-License-Identifier: Apache-2.0
 
+version: "2"
+
 linters:
+  disable-all: true
+  disable:
+    - errcheck
+    - staticcheck
   enable:
     - asasalint
     - asciicheck
@@ -12,111 +18,73 @@ linters:
     - cyclop
     - depguard
     - dogsled
-    - dupl
     - durationcheck
-    - errcheck
     - errname
     - errorlint
     - exhaustive
-    - funlen
-    - gci
+    # - funlen  # Some functions are long
     - gochecknoinits
     - goconst
     - gocritic
     - gocyclo
-    - godot
-    - gofmt
-    - gofumpt
-    - goheader
-    - goimports
+    # - godot
+    # - goheader
     - gomoddirectives
     - goprintffuncname
-    - gosec
-    - gosimple
-    - govet
-    - ineffassign
+    # - gosec
     - lll
     - misspell
     - mnd
     - nakedret
-    - nilerr
     - nilnil
-    - noctx
-    - nolintlint
-    - prealloc
+    # - noctx
+    # - nolintlint
+    # - prealloc
     - predeclared
-    - revive
-    - staticcheck
-    - stylecheck
-    - tagliatelle
-    - testpackage
+    # - revive
+    # - stylecheck
+    # - tagliatelle
+    # - testpackage
     - testableexamples
     - thelper
     - tparallel
-    - typecheck
     - unconvert
     - unparam
-    - unused
     - usestdlibvars
     - usetesting
     - whitespace
-
-run:
-  timeout: 10m
-
-  issues-exit-code: 1
-
-  tests: true
-
-  modules-download-mode: readonly
-
-  go: ""
-
-linters-settings:
-  gomoddirectives:
-    replace-local: true
-  depguard:
-    rules:
-      Main:
-        files:
-          - $all
-          - "!$test"
-        allow:
-          - $gostd
-          - google.golang.org/grpc
-          - google.golang.org/protobuf
-          - github.com/open-edge-platform
-          - github.com/cenkalti/backoff/v4
-          - github.com/prometheus/client_golang/prometheus
-        deny: []
-      Test:
-        files:
-          - $test
-        allow:
-          - $gostd
-          - google.golang.org/grpc
-          - github.com/open-edge-platform
-          - github.com/undefinedlabs/go-mpatch
-          - github.com/golang/mock/gomock
-          - github.com/stretchr/testify/require
-          - github.com/stretchr/testify/assert
-          - github.com/google/go-cmp/cmp
-          - github.com/google/uuid
-        deny: []
-
-  dupl:
-    # tokens count to trigger issue, 150 by default
-    threshold: 100
-
-  gofmt:
-    # simplify code: gofmt with `-s` option, true by default
-    simplify: true
-
-  govet:
-    enable:
-      - shadow
-
-  gocritic:
+  settings:
+    gomoddirectives:
+      replace-local: true
+    depguard:
+      rules:
+        main:
+          files:
+            - $all
+            - "!$test"
+          allow:
+            - $gostd
+            - google.golang.org/grpc
+            - google.golang.org/protobuf
+            - github.com/open-edge-platform
+            - github.com/cenkalti/backoff/v4
+            - github.com/prometheus/client_golang/prometheus
+          deny: []
+        test:
+          files:
+            - $test
+          allow:
+            - $gostd
+            - google.golang.org/grpc
+            - github.com/open-edge-platform
+            - github.com/undefinedlabs/go-mpatch
+            - github.com/golang/mock/gomock
+            - github.com/stretchr/testify/require
+            - github.com/stretchr/testify/assert
+            - github.com/google/go-cmp/cmp
+            - github.com/google/uuid
+          deny: []
+    gocritic:
     enabled-tags:
       - diagnostic
       - experimental
@@ -159,57 +127,30 @@ linters-settings:
     # subdir of a project it can't find external interfaces. All text editor
     # integrations with golangci-lint call it on a directory with the changed file.
     check-exported: false
+    cyclop:
+      max-complexity: 10
+    exhaustive:
+      default-signifies-exhaustive: true
+    lll:
+      line-length: 130
+      tab-width: 4
+    funlen:
+      lines: 100
+      statements: 50
+  exclusions:
+    generated: lax
+    paths:
+      - pkg/api/
+      - third_party$
+      - builtin$
+      - examples$
 
-  cyclop:
-    # SDL requirements dictate a maximum cyclomatic complexity of 10
-    max-complexity: 10
-
-  errcheck:
-    # Report `a := b.(MyStruct)` when `a, ok := ...` should be.
-    check-type-assertions: true   # Default: false
-    # Report skipped checks:`num, _ := strconv.Atoi(numStr)`.
-    check-blank: true   # Default: false
-    # Function to skip.
-    exclude-functions:
-      - io/ioutil.ReadFile
-      - io.Copy(*bytes.Buffer)
-      - io.Copy(os.Stdout)
-
-  exhaustive:
-    default-signifies-exhaustive: true
-
-  gosec:
-    # To select a subset of rules to run.
-    # Available rules: https://github.com/securego/gosec#available-rules
-    includes:
-      - G401
-      - G306
-      - G101
-      - G102
-      - G103
-      - G104
-      - G106
-      - G107
-      - G108
-      - G109
-      - G110
-
-  lll:
-    line-length: 130
-    tab-width: 4
-
-  funlen:
-    lines: 100
-    statements: 50
-
-  gci:
-    sections:
-      # Standard section: captures all standard packages.
-      - standard
-      # Default section: contains all imports that could not be matched to another section type.
-      - default
-      # Custom section: groups all imports with the specified Prefix.
-      - prefix(github.com/open-edge-platform)
+run:
+  timeout: 10m
+  issues-exit-code: 1
+  tests: true
+  modules-download-mode: readonly
+  go: ""
 
 issues:
   max-issues-per-linter: 0
@@ -225,17 +166,30 @@ issues:
   uniq-by-line: false
 
 output:
-  # Format:
-  # colored-line-number|line-number|json|tab|checkstyle|code-climate|junit-xml|github-actions
-  #
-  # Multiple can be specified by separating them by comma, output can be provided
-  # for each of them by separating format name and path by colon symbol.
-  # Output path can be either `stdout`, `stderr` or path to the file to write to.
-  # Example: "checkstyle:report.json,colored-line-number"
-  #
-  # Default: colored-line-number
-  formats: colored-line-number:stdout,html:out/golangci-lint_report.html
-
-  print-linter-name: true
-
+  formats:
+    text:
+      path: stdout
+      print-linter-name: true
+    html:
+      path: out/golangci-lint_report.html
   sort-results: true
+
+formatters:
+  enable:
+    - gci
+    - gofmt
+    - gofumpt
+    - goimports
+  settings:
+    gci:
+      sections:
+        - standard
+        - default
+        - prefix(github.com/open-edge-platform)
+  exclusions:
+    generated: lax
+    paths:
+      - pkg/api/
+      - third_party$
+      - builtin$
+      - examples$
