--- a/host/.golangci.yml
+++ b/host/.golangci.yml
@@ -3,9 +3,19 @@
 # SPDX-License-Identifier: Apache-2.0
 
 version: "2"
-
+run:
+  go: ""
+  modules-download-mode: readonly
+  issues-exit-code: 1
+  tests: true
+output:
+  formats:
+    text:
+      path: stdout
+      print-linter-name: true
+    html:
+      path: out/golangci-lint_report.html
 linters:
-  disable-all: true
   enable:
     - asasalint
     - asciicheck
@@ -15,6 +25,7 @@ linters:
     - cyclop
     - depguard
     - dogsled
+    - dupl
     - durationcheck
     - errname
     - errorlint
@@ -28,45 +39,37 @@ linters:
     - goheader
     - gomoddirectives
     - goprintffuncname
+    - gosec
     - lll
     - misspell
     - mnd
     - nakedret
     - nilerr
     - nilnil
+    - noctx
+    - nolintlint
+    - prealloc
     - predeclared
+    - revive
+    - staticcheck
     - tagliatelle
-    - testpackage
     - testableexamples
+    - testpackage
     - thelper
     - tparallel
     - unconvert
     - unparam
     - usestdlibvars
     - whitespace
-    - errcheck
-    - staticcheck
-    - revive
-    - gosec
-    - noctx
-    - nolintlint
-    - prealloc
-  formatters:
-    - gci
-    - gofmt
-    - gofumpt
-    - goimports
   settings:
-    gomoddirectives:
-      replace-local: true
-      replace-allow-list:
-        - github.com/open-edge-platform/infra-managers/maintenance
+    cyclop:
+      max-complexity: 10
     depguard:
       rules:
-        main:
+        Main:
           files:
             - $all
-            - "!$test"
+            - '!$test'
           allow:
             - $gostd
             - github.com/open-edge-platform
@@ -76,8 +79,7 @@ linters:
             - github.com/prometheus/client_golang/prometheus
             - google.golang.org/grpc
             - google.golang.org/protobuf
-          deny: []
-        test:
+        Test:
           files:
             - $test
           allow:
@@ -91,141 +93,125 @@ linters:
             - github.com/google/uuid
             - google.golang.org/grpc
             - google.golang.org/protobuf
-          deny: []
-
-    gofmt:
-      # simplify code: gofmt with `-s` option, true by default
-      simplify: true
-
+    dupl:
+      threshold: 100
+    errcheck:
+      check-type-assertions: true
+      check-blank: true
+      exclude-functions:
+        - io/ioutil.ReadFile
+        - io.Copy(*bytes.Buffer)
+        - io.Copy(os.Stdout)
+    exhaustive:
+      default-signifies-exhaustive: true
+    funlen:
+      lines: 100
+      statements: 50
     gocritic:
+      disabled-checks:
+        - hugeParam
+        - rangeExprCopy
+        - rangeValCopy
+        - unnamedResult
       enabled-tags:
         - diagnostic
         - experimental
         - opinionated
         - performance
         - style
-      disabled-checks:
-        # These 3 will detect many cases, but they do sense
-        # if it's performance oriented code
-        - hugeParam
-        - rangeExprCopy
-        - rangeValCopy
-        - unnamedResult
-
+    gomoddirectives:
+      replace-allow-list:
+        - github.com/open-edge-platform/infra-managers/maintenance
+      replace-local: true
+    gosec:
+      includes:
+        - G401
+        - G306
+        - G101
+        - G102
+        - G103
+        - G104
+        - G106
+        - G107
+        - G108
+        - G109
+        - G110
+    govet:
+      enable:
+        - shadow
+    lll:
+      line-length: 130
+      tab-width: 4
     misspell:
-      # Correct spellings using locale preferences for US or UK.
-      # Default is to use a neutral variety of English.
-      # Setting locale to US will correct the British spelling of 'colour' to 'color'.
       locale: US
-      ignore-words:
+      ignore-rules:
         - someword
-
     nakedret:
-      # No naked returns, ever.
       max-func-lines: 1
     tagliatelle:
       case:
         rules:
-          json: snake
-          yaml: snake
-          xml: camel
-          bson: camel
           avro: snake
+          bson: camel
+          json: snake
           mapstructure: kebab
-
+          xml: camel
+          yaml: snake
     unparam:
-      # Inspect exported functions, default is false. Set to true if no external
-      # program/library imports your code. XXX: if you enable this setting, unparam
-      # will report a lot of false-positives in text editors: if it's called for
-      # subdir of a project it can't find external interfaces. All text editor
-      # integrations with golangci-lint call it on a directory with the changed file.
       check-exported: false
-
-    cyclop:
-      # SDL requirements dictate a maximum cyclomatic complexity of 10
-      max-complexity: 10
-
-    exhaustive:
-      default-signifies-exhaustive: true
-
-    lll:
-      line-length: 130
-      tab-width: 4
-
-    funlen:
-      lines: 100
-      statements: 50
-
-    gci:
-      sections:
-        # Standard section: captures all standard packages.
-        - standard
-        # Default section: contains all imports that could not be matched to another section type.
-        - default
-        # Custom section: groups all imports with the specified Prefix.
-        - prefix(github.com/open-edge-platform)
-
-run:
-  timeout: 10m
-  issues-exit-code: 1
-  tests: true
-  modules-download-mode: readonly
-  go: ""
-
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    rules:
+      - linters:
+          - cyclop
+          - dupl
+        path: pkg/hostmgr/grpc_server_nic_test.go
+      - linters:
+          - dupl
+        path: pkg/hostmgr/grpc_server_storage_test.go
+      - linters:
+          - dupl
+        path: pkg/hostmgr/grpc_server_usb_test.go
+      - linters:
+          - dupl
+        path: pkg/hostmgr/grpc_server_test.go
+      - linters:
+          - dupl
+        path: pkg/utils/utils_test.go
+      - linters:
+          - dupl
+        path: pkg/invclient/invclient_test.go
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
 issues:
   max-issues-per-linter: 0
   max-same-issues: 0
-  # When set to `true` linter will analyze only new code which are
-  # not committed or after some specific revision. This is a cool
-  # feature when you're going to introduce linter into a big project.
-  # But I prefer going gradually package by package.
-  # So, it's set to `false` to scan all code.
   new: false
   fix: false
-  exclude-rules:
-    - path: pkg/hostmgr/grpc_server_nic_test.go
-      linters:
-        # this test code not shipped in production
-        - dupl
-        - cyclop
-    - path: pkg/hostmgr/grpc_server_storage_test.go
-      linters:
-        # this test code not shipped in production
-        - dupl
-    - path: pkg/hostmgr/grpc_server_usb_test.go
-      linters:
-        # this test code not shipped in production
-        - dupl
-    - path: pkg/hostmgr/grpc_server_test.go
-      linters:
-        # this test code not shipped in production
-        - dupl
-    - path: pkg/utils/utils_test.go
-      linters:
-        # this test code not shipped in production
-        - dupl
-    - path: pkg/invclient/invclient_test.go
-      linters:
-        # this test code not shipped in production
-        - dupl
-
-output:
-  # Format:
-  # colored-line-number|line-number|json|tab|checkstyle|code-climate|junit-xml|github-actions
-  #
-  # Multiple can be specified by separating them by comma, output can be provided
-  # for each of them by separating format name and path by colon symbol.
-  # Output path can be either `stdout`, `stderr` or path to the file to write to.
-  # Example: "checkstyle:report.json,colored-line-number"
-  #
-  # Default: colored-line-number
-  formats:
-    text:
-      path: stdout
-      print-linter-name: true
-    html:
-      path: out/golangci-lint_report.html
-
-  uniq-by-line: false
-
-  sort-results: true
+formatters:
+  enable:
+    - gci
+    - gofmt
+    - gofumpt
+    - goimports
+  settings:
+    gci:
+      sections:
+        - standard
+        - default
+        - prefix(github.com/open-edge-platform)
+    gofmt:
+      simplify: true
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
