--- a/telemetry/.golangci.yml
+++ b/telemetry/.golangci.yml
@@ -3,9 +3,19 @@
 # SPDX-License-Identifier: Apache-2.0
 
 version: "2"
-
+run:
+  go: ""
+  modules-download-mode: readonly
+  issues-exit-code: 1
+  tests: true
+output:
+  formats:
+    text:
+      path: stdout
+      print-linter-name: true
+    html:
+      path: out/golangci-lint_report.html
 linters:
-  disable-all: true
   enable:
     - asasalint
     - asciicheck
@@ -15,6 +25,7 @@ linters:
     - cyclop
     - depguard
     - dogsled
+    - dupl
     - durationcheck
     - errname
     - errorlint
@@ -28,41 +39,37 @@ linters:
     - goheader
     - gomoddirectives
     - goprintffuncname
+    - gosec
     - lll
     - misspell
     - mnd
     - nakedret
     - nilerr
     - nilnil
+    - noctx
+    - nolintlint
+    - prealloc
     - predeclared
+    - revive
+    - staticcheck
     - tagliatelle
-    - testpackage
     - testableexamples
+    - testpackage
     - thelper
     - tparallel
     - unconvert
     - unparam
     - usestdlibvars
     - whitespace
-    - errcheck
-    - staticcheck
-    - revive
-    - gosec
-    - noctx
-    - nolintlint
-    - prealloc
-  formatters:
-    - gci
-    - gofmt
-    - gofumpt
-    - goimports
   settings:
+    cyclop:
+      max-complexity: 10
     depguard:
       rules:
-        main:
+        Main:
           files:
             - $all
-            - "!$test"
+            - '!$test'
           allow:
             - $gostd
             - github.com/open-edge-platform
@@ -70,8 +77,7 @@ linters:
             - github.com/prometheus/client_golang/prometheus
             - google.golang.org/grpc
             - google.golang.org/protobuf
-          deny: []
-        test:
+        Test:
           files:
             - $test
           allow:
@@ -82,89 +88,104 @@ linters:
             - github.com/mennanov/fmutils
             - google.golang.org/grpc
             - google.golang.org/protobuf
-          deny: []
-
-
+    dupl:
+      threshold: 100
+    errcheck:
+      check-type-assertions: true
+      check-blank: true
+      exclude-functions:
+        - io/ioutil.ReadFile
+        - io.Copy(*bytes.Buffer)
+        - io.Copy(os.Stdout)
+    exhaustive:
+      default-signifies-exhaustive: true
+    funlen:
+      lines: 100
+      statements: 50
     gocritic:
+      disabled-checks:
+        - hugeParam
+        - rangeExprCopy
+        - rangeValCopy
+        - unnamedResult
       enabled-tags:
         - diagnostic
         - experimental
         - opinionated
         - performance
         - style
-      disabled-checks:
-        # These 3 will detect many cases, but they do sense
-        # if it's performance oriented code
-        - hugeParam
-        - rangeExprCopy
-        - rangeValCopy
-        - unnamedResult
-
-    misspell:
-      locale: US
-
-    nakedret:
-      # No naked returns, ever.
-      max-func-lines: 1
-
-    tagliatelle:
-      case:
-        rules:
-          json: snake
-          yaml: snake
-          xml: camel
-          bson: camel
-          avro: snake
-          mapstructure: kebab
-
-    cyclop:
-      # SDL requirements dictate a maximum cyclomatic complexity of 10
-      max-complexity: 10
-
-    exhaustive:
-      default-signifies-exhaustive: true
-
+    gosec:
+      includes:
+        - G401
+        - G306
+        - G101
+        - G102
+        - G103
+        - G104
+        - G106
+        - G107
+        - G108
+        - G109
+        - G110
+    govet:
+      enable:
+        - shadow
     lll:
       line-length: 130
       tab-width: 4
-
-    funlen:
-      lines: 100
-      statements: 50
-
-    gci:
-      sections:
-        # Standard section: captures all standard packages.
-        - standard
-        # Default section: contains all imports that could not be matched to another section type.
-        - default
-        # Custom section: groups all imports with the specified Prefix.
-        - prefix(github.com/open-edge-platform)
-
-run:
-  timeout: 10m
-  issues-exit-code: 1
-  tests: true
-  modules-download-mode: readonly
-  go: ""
-
+    misspell:
+      locale: US
+    nakedret:
+      max-func-lines: 1
+    tagliatelle:
+      case:
+        rules:
+          avro: snake
+          bson: camel
+          json: snake
+          mapstructure: kebab
+          xml: camel
+          yaml: snake
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    rules:
+      - path: (.+)\.go$
+        text: Error return value of `.*Close` is not checked
+      - path: (.+)\.go$
+        text: Error return value of `.*Flush` is not checked
+      - path: (.+)\.go$
+        text: Error return value of `.*Write` is not checked
+      - path: (.+)\.go$
+        text: Error return value of `.*Stop` is not checked
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
 issues:
   max-issues-per-linter: 0
   max-same-issues: 0
   new: false
   fix: false
-  exclude:
-    - Error return value of `.*Close` is not checked
-    - Error return value of `.*Flush` is not checked
-    - Error return value of `.*Write` is not checked
-    - Error return value of `.*Stop` is not checked
-
-output:
-  formats:
-    text:
-      path: stdout
-      print-linter-name: true
-    html:
-      path: out/golangci-lint_report.html
-  uniq-by-line: false
-  sort-results: true
+formatters:
+  enable:
+    - gci
+    - gofmt
+    - gofumpt
+    - goimports
+  settings:
+    gci:
+      sections:
+        - standard
+        - default
+        - prefix(github.com/open-edge-platform)
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
